Fixed bug on management view of example with extra scrollbar

--- a/client_resources/css/manage-projects.css
+++ b/client_resources/css/manage-projects.css
@@ -67,7 +67,7 @@
 }
 .card-body {
     width: 100%;
-    height: 100%;
+    height: 95px;
 }
 .card-footer {
     border-top: 1px solid #90B2CD;
